# termcolor_dg

./: .gitignore  CHANGES.md  INSTALL.md  Makefile  README.md  TODO.md  setup.cfg  setup.py  termcolor.py  termcolor_dg.spec  tox.ini
.github/workflows/: pylint.yml  tests.yml  tests_python2.yml
src/: termcolor2.py  termcolor_dg.py
test/: test_termcolor2.py  test_termcolor_dg.py
